[metadata]
name = Acqua
version = 0.0.2
author = Intrical AI
author_email = alvise.sembenico@intrical.ai
description = A flow based library to precompute analytics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Intrical-AI/acqua
project_urls =
    Bug Tracker = https://github.com/Intrical-AI/acqua/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src